Edit view fixes to make pushing the buttons easier on mobile

--- a/src/CageFight/sass/main.sass
+++ b/src/CageFight/sass/main.sass
@@ -60,9 +60,17 @@ body
 
 .editView
     input[type="number"]
-        max-width: 3em
+        max-width: 4em
     .editDamage input
         max-width: 80px
+    button, input, select
+        margin-top: 5px
+        margin-right: 10px
+    input, select
+        margin-left: 5px
+    button
+        padding: 5px
+        margin-right: 50px
 
 .slideFromTop
     animation: fromTop 0.5s ease-in-out
